--- a/signup.html
+++ b/signup.html
@@ -65,8 +65,8 @@
                 <input type="password" class="form-control"  placeholder="Enter Password" id="pass1">
               </div>
               <div class="form-group">
-                <label for="exampleInputEmail1">Phone No.</label>
-                <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Phone Number">
+                <label for="phone number">Phone No.</label>
+                <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Phone Number" id="Phone">
                 <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
               </div>
               
